# video-filter-sequential

./:  README.md  CMakeLists.txt  build.sh  main.cpp  run.sh  test.m4v
Filter/: black_white.cpp  black_white.h  blur.cpp  blur.h  contrast.cpp  contrast.h  edge_detection.cpp  edge_detection.h  filter.cpp  filter.h  sepia.cpp  sepia.h
